Colour fixes, improved 404, min-height page wrap

--- a/.build/assets/styles/__blocks/_cover.scss
+++ b/.build/assets/styles/__blocks/_cover.scss
@@ -6,6 +6,9 @@
 
 	&:first-child {
 		margin-top: calc(var(--unit-large) * -2);
+		@include desktop {
+			margin-top: calc(var(--unit-large) * -3);
+		}
 	}
 
 	&::after {
